# AIOS

./: .dockerignore  .gitignore  .gitmodules  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  ChatGPT-souuSouu Agent System Design.md  Dockerfile  ISSUE_TEMPLATE.md  LICENSE  README.md  convo.md  fix_codeblocks.py  implementation_plan.md  new.md  sou new idea.md  souu.md  tests_guide.md  upgrade.md
aios_integration_tests/: Cargo.toml
aios_integration_tests/tests/: attack_simulation.rs  chaos_tests.rs  common.rs  pipeline_tests.rs
constitution/Appendix/: Definitions.md
constitution/Article-I-Human-Sovereignty/: 001-Human-Authority.md  002-Human-Rights.md  004-Human-Override.md
constitution/Article-II-AIOS-Governance/: 004-Checks-And-Balances.md
constitution/Article-III-Autonomous-Intelligence/: 006-Runtime-Independence.md
constitution/Article-IV-Security/: 003-Execution.md
constitution/Article-V-Platform/: 001-Evolution.md  002-Amendments.md  003-Compatibility.md
constitution/Preamble/: 000-Preamble.md
full plan bible/: _P2_AUDIT_REPORT.md  _file_analysis.csv  ideas_suggest.md
full plan bible/ADR/: 000 — Origin.md  001-Architectural-Principles.md  002-Terminology.md  003-Taxonomy.md.md  004 — Manifesto.md  005-Engineering-Goals.md  006-Non-Goals.md  007-Engineering-Values.md  008-Long-Term-Vision.md  009-Identity.md  010-Design-Decisions.md  011-Language-Standard.md  012-Glossary.md  013-Evolution.md  014-Quality-Standards.md
full plan bible/APIs/: 000-Master-API-Spec.md  AIOS-Architecture-Diagram.md
full plan bible/Bible/: 0001-Constitution-Roadmap.md  (+9 more)
(+543 files in other folders)
