[workspace]
members = [
    "aios_core",
    "aios_intent",
    "aios_policy",
    "aios_execution",
    "aios_context_resolver",
]
resolver = "2"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# IDs and time
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"

# Logging & metrics
log = "0.4"
metrics = "0.24"

# Concurrency
dashmap = "6.0"
parking_lot = "0.12"

# Cryptography
hmac = "0.12"
sha2 = "0.10"

# Pattern matching
regex = "1.10"

# Async
tokio = { version = "1.0", features = ["full"] }
